[tool.poetry]
name = "pycrypto"
version = "2.7a1"
description = "Cryptographic modules for Python."
authors = ["Darsey Litzenberger <dlitz@dlitz.net>"]
license = "Public Domain"
readme = "README.md"
repository = "https://github.com/elsa/pycrypto"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
