[tool.poetry]
name = "pycrypto"
version = "2.6.1.post2"
description = "Cryptographic modules for Python."
authors = ["Darsey Litzenberger <dlitz@dlitz.net>"]
license = "Public Domain"
readme = "README"
repository = "https://github.com/elsa/pycrypto"
packages = [{ include = "Crypto", from = "lib" }]
include = [
    { path = "src/**/*", format = "sdist" },
    { path = "configure", format = "sdist" },
    { path = "config.h.in", format = "sdist" },
    { path = "buildenv.in", format = "sdist" },
    { path = "Makefile.pre.in", format = "sdist" },
    { path = "MANIFEST.in", format = "sdist" },
    { path = "setup.py", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.8"

# Native extensions still build via legacy setup.py (autoconf / libgmp).
# setuptools<58 keeps pycrypto's build_py_2to3 path available for Python 3 wheels.
[build-system]
requires = ["setuptools<58", "wheel"]
build-backend = "setuptools.build_meta"
